# mor_blogger_theme_editor

./: Cargo.toml  MOR_PLAN.md  README.md  build_css.sh  sys
src/: app.rs  clipboard.rs  config.rs  defaults.rs  diagnostics.rs  editor_ui.css  lib.rs  main.rs  presets.rs  presets_og_backup.txt  rehydration.rs  render.rs  render_pages.rs  template.xml
src/app/: config_bridge.rs  hotswap.rs  keyboard.rs  layout_state.rs  mod.rs  render_state.rs  restore_drop.rs  shell.rs  state.rs
src/config/: ads.rs  mod.rs  pages.rs  styling.rs  template_pack.rs
src/editor_styles/: 00-tokens.css  01-scrollbars.css  10-workspace-shell.css  11-workspace-variations.css  12-floating-windows.css  20-ui-accordion.css  21-ui-inputs.css  22-ui-toolbars.css  30-panel-left-visuals.css  31-panel-right-data.css  32-panel-center-workspace.css  33-preview-canvas.css  34-preset-floating.css  40-diagnostics.css  99-legacy-quirks.css
src/presets/: fluid_interactive.rs  glassmorphism.rs  minimal.rs  mod.rs  modern_editorial.rs  mor_fluid_interactive.rs  mor_glassmorphism.rs  mor_minimal.rs  mor_modern_editorial.rs  mor_neon_cyberpunk.rs  mor_newspaper.rs  mor_retro_mmorpg.rs  mor_terminal_classic.rs  mor_web_1_0_frames.rs  mor_web_2_0_skeuo.rs  neon_cyberpunk.rs  newspaper.rs  retro_mmorpg.rs  terminal_classic.rs  web_1_0_frames.rs  web_2_0_skeuo.rs
src/render/: ads.rs  css_builder.rs  mod.rs  preview.rs  template_resolver.rs  theme.rs  util.rs  xml_generator.rs
src/styles/: 00-tokens.css  10-layout-shell.css  11-layout-variations.css  20-panels-presets.css  21-panels-accordian.css  22-panels-inputs.css  23-panels-toolbar.css  30-floating-window.css  (+4 more)
(+159 files in other folders)
