[package]
name = "mor_blogger_theme_editor"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
dioxus = { version = "=0.5.6", features = ["web"] }
dioxus-html = "=0.5.6"
dioxus-logger = "=0.5.1"
log = "0.4"
roxmltree = "0.20"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

wasm-bindgen = "=0.2.92"
wasm-bindgen-futures = "=0.4.42"
js-sys = "=0.3.69"

[dependencies.web-sys]
version = "=0.3.69"
features = [
    "Window",
    "Navigator",
    "Clipboard",
    "console"
]